WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194743
[JSC] JSWrapperObject should not be destructible
https://bugs.webkit.org/show_bug.cgi?id=194743
Summary
[JSC] JSWrapperObject should not be destructible
Yusuke Suzuki
Reported
2019-02-16 01:33:26 PST
[JSC] JSWrapperObject should not be destructible
Attachments
Patch
(20.31 KB, patch)
2019-02-16 01:54 PST
,
Yusuke Suzuki
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2019-02-16 01:54:59 PST
Created
attachment 362214
[details]
Patch
Saam Barati
Comment 2
2019-02-16 02:19:35 PST
Comment on
attachment 362214
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=362214&action=review
> Source/JavaScriptCore/ChangeLog:10 > + JSWrapperObjec to JSDestructibleObject, and makes JSWrapperObject non-destructible.
Typo: JSWrapperObjec
Yusuke Suzuki
Comment 3
2019-02-16 10:41:39 PST
Comment on
attachment 362214
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=362214&action=review
>> Source/JavaScriptCore/ChangeLog:10 >> + JSWrapperObjec to JSDestructibleObject, and makes JSWrapperObject non-destructible. > > Typo: JSWrapperObjec
Thanks, fixed!
Yusuke Suzuki
Comment 4
2019-02-16 10:50:18 PST
Committed
r241649
: <
https://trac.webkit.org/changeset/241649
>
Radar WebKit Bug Importer
Comment 5
2019-02-16 10:51:23 PST
<
rdar://problem/48139806
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug